--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,13 +23,44 @@ h1, h2 {
 #navbar {
     background-color: aqua;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 2em;
+    
 }
+
+#logo {
+    padding-left: 50px;
+    padding-top: 10px;
+}
+
 
 #menu {
     list-style-type: none;
+    padding-right: 50px;
+    padding-top: 10px;
 }
 
 #menu .menu-items {
     display: inline-block;
+    padding: 20px 10px ;
+    
+}
+
+.menu-items a {
+    color: 	#ff0000;
+    
+}
+
+#navbar a{
+    text-decoration: none;
+}
+
+#navbar a:hover {
+    color: purple;
+    
+}
+
+.active {
+    border-bottom: 1px solid #ff0000;
 }
