--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,6 +123,7 @@ h1, h2 {
     flex-direction: column;
     text-align: left;
     margin: 50px;
+    background-color: antiquewhite;
 }
 #services-title {
     font-size: 2.5rem;
