--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,6 +37,10 @@ h1, h2 {
     letter-spacing: 4px;
 }
 
+#logo:hover {
+    color: purple;
+}
+
 
 #menu {
     list-style-type: none;
@@ -52,7 +56,7 @@ h1, h2 {
 }
 
 .menu-items a {
-    color: 	#ff0000;
+    color: 	#FF1493;
     
 }
 
@@ -119,7 +123,8 @@ h1, h2 {
 
 #cover-text h2 {
     color: #0000FF;
-   
+    
+}
 /* playdays services styling */
 
 #services {
@@ -142,7 +147,8 @@ h1, h2 {
 #class-times {
     display: flex;
     flex-direction: row;
-    background-color: rgba(0, 255, 255, 0.4);
+    background-color: rgba(0, 255, 0, 0.3);
+    
     
 }
 
