--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -193,4 +193,63 @@ h1, h2 {
     height: 350px;
 }
 
+/* add styles to contact form */
+
+#form-section {
+    background: url('../images/hero-image.jpg');
+    background-size: cover;
+    background-position: center;
+    height: 82.8vh;
+}
+
+
+.registration-form {
+    display: flex;
+    flex-direction: column;
+    padding: 40px;
+    max-width: 960px;
+    margin-left: 180px;
+    padding: 30px;
+    background-color: rgba(60, 60, 60, 0.8);
+    
+    
+}
+.registration-form > h2 {
+    
+    margin-bottom: 30px;
+}
+
+.text-input {
+    background: transparent;
+    color: whitesmoke;
+    width: 100%;
+    border-radius: 2px;
+    border: 2px solid whitesmoke;
+    font-size: 2rem;
+
+}
+
+.text-input:hover {
+    border-color: plum;
+}
+
+.submit-button {
+    margin-top: 20px;
+    width: 20%;
+    background-color: rgba(255, 8, 127, 0.7);
+    border-radius: 4px;
+    font-size: 2rem;
+
+}
+
+.submit-button:hover {
+    background-color: whitesmoke;
+    color: #FF1493;
+}
+
+.dit {
+    background-color: black;
+}
+
+
 
