--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,7 +26,7 @@ h1, h2 {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    font-size: 2rem;
+    font-size: 200%;
 }
 
 .logo {
@@ -46,7 +46,7 @@ h1, h2 {
     padding-right: 50px;
     padding-top: 10px;
     letter-spacing: 2px;
-    display: flex;
+    
 }
 
 .menu .menu-items {
@@ -110,7 +110,7 @@ h1, h2 {
 /* style for cover text */
 
 .cover-text {
-    font-size: 2rem;
+    font-size: 200%;
     font-family: Bubblegum Sans, sans-serif;
     text-transform: uppercase;
     text-align: left;
@@ -135,11 +135,11 @@ h1, h2 {
 }
 
 .services-title {
-    font-size: 2.5rem;
+    font-size: 250%;
 }
 
 .services-list {
-    font-size: 1.3rem;
+    font-size: 130%;
     margin-left: 20px;
 }
 
@@ -167,7 +167,7 @@ h1, h2 {
 }
 
 .social i {
-    font-size: 2rem;
+    font-size: 200%;
     padding: 20px;
 }
 
@@ -225,23 +225,39 @@ h1, h2 {
 
 /* add styles to contact form */
 
+.full-page {
+    position: absolute;
+        top: 0px;
+        right: 0px;
+        left: 0px;
+        bottom: 0px;
+}
+
 .form-section {
     background: url('../images/hero-image.jpg');
     background-size: cover;
     background-position: center;
-    height: 82.8vh;
-}
-
-
-.registration-form {
+    height: 100%;
     display: flex;
     flex-direction: column;
+    }
+
+    .registration {
+        margin: 5% 10%;
+        
+    }
+
+.registration-form {
+    
     padding: 40px;
     max-width: 100%;
-    margin-left: 180px;
-    padding: 30px;
     background-color: rgba(60, 60, 60, 0.8);
+    margin: auto 0;
+    width: 100%;
+    padding-top: 60px;
 }
+
+
 
 .registration-form > h2 {
     
@@ -254,19 +270,29 @@ h1, h2 {
     width: 100%;
     border-radius: 2px;
     border: 2px solid #F5F5F5;
-    font-size: 2rem;
+    font-size: 200%;
 }
 
 .text-input:hover {
     border-color: #673147;
 }
 
+.dit {
+    margin: 20px;
+    margin-left: 30px;
+}
+
 .submit-button {
-    margin-top: 20px;
+    margin-top: 40px;
     width: 20%;
     background-color: #FF1493;
     border-radius: 4px;
-    font-size: 2rem;
+    font-size: 200%;
+    display: flex;
+    flex-direction: column;
+    margin-left: 20px;
+    padding-left: 90px;
+    
 }
 
 .submit-button:hover {
@@ -274,9 +300,6 @@ h1, h2 {
     color: #FF1493;
 }
 
-.dit {
-    background-color: black;
-}
 
 
 
