--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -305,6 +305,7 @@ h1, h2 {
     padding: 20px;
     color: #F5F5F5;
     font-size: 150%;
+    margin-top: 20px;
     
 }
 
@@ -316,6 +317,7 @@ h1, h2 {
 .registration #message {
     height: 200px;
 }
+
 
 
 
