--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 h1, h2 {
-    font-family: Bubblegum Sans, sans-serif;
+    font-family: "Bubblegum Sans", sans-serif;
     text-transform: uppercase;
     color: #FF1493;
     letter-spacing: 2px;
@@ -112,7 +112,7 @@ h1, h2 {
 
 .cover-text {
     font-size: 200%;
-    font-family: Bubblegum Sans, sans-serif;
+    font-family: "Bubblegum Sans", sans-serif;
     text-transform: uppercase;
     text-align: left;
     margin-left: 50px;
@@ -149,7 +149,7 @@ h1, h2 {
 .class-times {
     display: flex;
     flex-direction: row;
-    background-color: #00FFFF;
+    background-color: #FFFFFF;
 }
 
 .class-times div {
